feat(documents): add aggregation pipeline
