# src/SonnetDB/Json/ServerJsonContext.cs
@@ -80,11 +80,23 @@ namespace SonnetDB.Json;
 [JsonSerializable(typeof(DocumentCountResponse))]
 [JsonSerializable(typeof(DocumentDistinctRequest))]
 [JsonSerializable(typeof(DocumentDistinctResponse))]
+[JsonSerializable(typeof(DocumentAggregateRequest))]
+[JsonSerializable(typeof(DocumentAggregateStageContract))]
+[JsonSerializable(typeof(DocumentAggregateGroupContract))]
+[JsonSerializable(typeof(DocumentAggregateGroupKeyContract))]
+[JsonSerializable(typeof(DocumentAggregateAccumulatorContract))]
+[JsonSerializable(typeof(DocumentAggregateUnwindContract))]
+[JsonSerializable(typeof(DocumentAggregateDistinctContract))]
+[JsonSerializable(typeof(DocumentAggregateResponse))]
 [JsonSerializable(typeof(List<DocumentWriteItem>))]
 [JsonSerializable(typeof(List<DocumentItemResponse>))]
 [JsonSerializable(typeof(List<DocumentFilterContract>))]
 [JsonSerializable(typeof(List<DocumentProjectionContract>))]
 [JsonSerializable(typeof(List<DocumentSortContract>))]
+[JsonSerializable(typeof(List<DocumentAggregateStageContract>))]
+[JsonSerializable(typeof(List<DocumentAggregateGroupKeyContract>))]
+[JsonSerializable(typeof(List<DocumentAggregateAccumulatorContract>))]
+[JsonSerializable(typeof(List<JsonElement>))]
 [JsonSerializable(typeof(IReadOnlyDictionary<string, JsonElement>))]
 [JsonSerializable(typeof(Dictionary<string, JsonElement>))]
 [JsonSerializable(typeof(IReadOnlyDictionary<string, string>))]
